[gd_scene load_steps=8 format=3 uid="uid://482iowqmgwn"]

[ext_resource type="Script" uid="uid://cn5ihgh0kfxwg" path="res://Talkable_Objects/Dialogue/dialogue.gd" id="1_oj50v"]
[ext_resource type="FontFile" uid="uid://ygufj767va0w" path="res://Dex_Scene_Stuff/Assets/PokemonGb-RAeo.ttf" id="2_yt7v2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_epa03"]
bg_color = Color(0.0627451, 0.0627451, 0.0627451, 1)

[sub_resource type="Gradient" id="Gradient_3k6gn"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_dt6dg"]
gradient = SubResource("Gradient_3k6gn")

[sub_resource type="FontVariation" id="FontVariation_apjud"]
base_font = ExtResource("2_yt7v2")
variation_embolden = -1.17
spacing_space = -10
spacing_top = 2
spacing_bottom = -2

[sub_resource type="FontVariation" id="FontVariation_nxl3f"]
base_font = ExtResource("2_yt7v2")
variation_embolden = -0.5
spacing_glyph = -1
spacing_space = -4
spacing_top = 2
spacing_bottom = -25

[node name="Dialogue" type="CanvasLayer"]
visible = false
script = ExtResource("1_oj50v")

[node name="DialogueBox" type="Panel" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -55.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_epa03")

[node name="DialogueContainer" type="HBoxContainer" parent="DialogueBox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CharacterTexture" type="TextureRect" parent="DialogueBox/DialogueContainer"]
unique_name_in_owner = true
texture_filter = 1
custom_minimum_size = Vector2(55, 55)
layout_mode = 2
texture = SubResource("GradientTexture1D_dt6dg")
expand_mode = 1

[node name="TextSection" type="VBoxContainer" parent="DialogueBox/DialogueContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Name" type="Label" parent="DialogueBox/DialogueContainer/TextSection"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
size_flags_vertical = 0
theme_override_fonts/font = SubResource("FontVariation_apjud")
theme_override_font_sizes/font_size = 16
text = "aka you"

[node name="Sentence" type="Label" parent="DialogueBox/DialogueContainer/TextSection"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = SubResource("FontVariation_nxl3f")
theme_override_font_sizes/font_size = 8
text = "How are you, Belric. We are friends from 1999."
autowrap_mode = 1

[node name="TypingSpeedTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[connection signal="timeout" from="TypingSpeedTimer" to="." method="_on_typing_speed_timer_timeout"]
